# QPIKSolver

./: .gitignore  CMakeLists.txt  QPIKSolver.cpp  QPIKSolver.h  README.md  heal.xml  test.cpp
include/: QPIKSolver.h
src/: QPIKSolver.cpp  runSolver.cpp
